force-app/main/default/objects/Product__c/fields/Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount__c</fullName>
    <label>Flat Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>