force-app/main/default/objects/Product__c/fields/Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount__c</fullName>
    <label>Percentage Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>